--- a/Assignment2/project_site.html
+++ b/Assignment2/project_site.html
@@ -1,1 +1,27 @@
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <link rel="stylesheet" href="css_basics.css">
+</head>
+<body>
+    <h1>Adrien Ciurczak Photography</h1>
+    <h2>Oregon Based</h2>
+    <h3>Portfolio In Progress</h3>
+    <a href="https://www.adrienciurczak.myportfolio.com" target="_blank">View my Adobe Portfolio here..</a>
+    <br><br>
+    
+    <h3>Session Types</h3>
+    <ul>
+        <li>Creative Portraits</li>
+        <li>Couple</li>
+        <li>Maternity</li>
+        <li>Newborn</li>
+        <li>Commercial</li>
+    </ul>
 
+    <p>Design services also offered</p>
+
+    <img src="intro-post copy.jpg" alt="Magazine Cover Style IG Post for Hair Stylist">
+
+</body>
+</html>
